# bytebeam_flutter_sdk

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/bytebeam_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: bytebeam_flutter.podspec
lib/: bytebeam_flutter.dart  downloader.dart  lib.dart  messenger.dart  types.dart  utils.dart
lib/src/rust/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: logger.dart  types.dart  types.freezed.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  types.rs
rust/src/api/: logger.rs  mod.rs  types.rs
