[package]
name = "bytebeam_flutter"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
serial = { git = "https://github.com/bytebeamio/serial-rs", branch = "android_fix" }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
uplink = { git = "https://github.com/bytebeamio/uplink", rev = "v2.18.1" }
log = "0.4.25"
anyhow = "1.0.75"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde_json = "1.0.137"
