[package]
name = "bytebeam_flutter"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
serial = { git = "https://github.com/bytebeamio/serial-rs", branch = "android_fix" }

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.7.0", features = ["log"] }
ureq = { version = "3.0.8", features = ["rustls", "json"], default-features = false }
anyhow = "1.0.75"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
